Fix overflow issue for projectcard tools

--- a/src/components/Projects/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard.module.scss
@@ -22,12 +22,13 @@
       margin-bottom: 0.6em;
     }
     .tools span {
-      margin: 0 0.6em;
+      display: inline-block;
+      margin: 0.3em 0.6em;
       font-size: 1em;
       color: var(--gray);
     }
     .links {
-      margin: 1.5em auto;
+      margin: 1em auto;
       width: 90%;
       a {
         margin: 0 5%;
